Change & Credit Log

  Version 1.1.0

    - Catered for getUserDetails raising an exception in a 
      graceful way

    Credits
   
      Chris Withers -- Development work.

  Version 0.9.0

    - Improved documentation

    - Corrected security declaration for getUserNames

    - Added getUsers method

    Credits

      Chris Withers   -- Development work and improved
                         documentation. Also documented one way
                         encyption usage.

      Charlie Reiman  -- Reported typo in security declaration for
                         getUserNames.

      Olivier Deckmyn -- Pointed out documentation that needed 
                         clarifying.  
      
      Stefan Holek    -- Suggested the implementation of the getUsers
                         method.

  Version 0.8.0

    Initial release

    Credits
    
      Chris Withers -- Development work.

Stuff still to be done:

  - Support for SUF containing things
  - Support for authenticate method
  - Support for authorisation?
  - Support for computed local roles.
  - Documentation of caching of method results.
  - Examples for how to use
  - Provide HTML documentation?
    
                