@@ -8,6 +8,14 @@
 ##title=
 ##
 user = getattr(container,name)
-user.manage_changeProperties(password=password,
-                             roles=roles)
+
+to_change = {
+    'roles':roles,
+    }
+
+if password is not None:
+    to_change['password'] = password
+    
+user.manage_changeProperties(**to_change)
+
 return 'done'
